--- a/author.hbs
+++ b/author.hbs
@@ -32,6 +32,8 @@
 </section>
 {{/author}}
 
+{{!-- Ad author top --}}
+{{>"ad-author-top"}}
 
 {{!-- The tag below includes the post loop - partials/loop.hbs --}}
 {{>"loop"}}
