--- a/partials/entry-meta.hbs
+++ b/partials/entry-meta.hbs
@@ -13,6 +13,6 @@
         <div class="u-block u-paddingBottom2 u-fontSizeSmaller u-noWrapWithEllipsis" style="padding-top:2px;">{{{author.bio}}}</div>
         {{/if}}{{/is}}
 
-        <tme class="entry-date u-textColorNormal u-fontSizeSmaller u-fontWeightThin u-block u-textColorNormal" datetime="{{date format='YYYY-MM-DD'}}">{{date published_at timeago="true"}}</time>
+        <time class="entry-date u-textColorNormal u-fontSizeSmaller u-fontWeightThin u-block u-textColorNormal" datetime="{{date format='YYYY-MM-DD'}}">{{date published_at timeago="true"}}</time>
     </div>
 </div>
