--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -26,14 +26,14 @@
 
     {{!-- Add your sticky content inside this box --}}
 
-    {{!-- <div class="sidebar-sticky">
+    <div class="sidebar-sticky">
 
         <!-- this is Book  -->
         <div class="sidebar-items u-marginBottom30"> <!--Open Book -->
-            <h3 class="sidebar-title u-fontSizeBase u-textColorDarker">.. your title sticky ..</h3>
-            <p class="u-textColorDarker u-fontSize15 u-marginBottom10"> .. your Content sticky .. </p>
+            {{!-- Ad home top --}}
+            {{>"ad-sidebar-sticky"}}
         </div> <!-- close Book -->
 
-    </div> --}}
+    </div>
 
 </aside>
