--- a/post.hbs
+++ b/post.hbs
@@ -24,6 +24,9 @@
         {{/if}}
     {{/has}}
 
+    {{!-- Ad post top --}}
+    {{>"ad-post-top"}}
+
 
     <section class="post-body u-container u-maxWidth740 u-relative u-clear">
         {{!-- Share post --}}
@@ -70,6 +73,9 @@
 </article>
 
 {{/post}}
+
+{{!-- Ad post top --}}
+{{>"ad-post-bottom"}}
 
 {{!-- post relative --}}
 {{>"post-related"}}
