--- a/tag.hbs
+++ b/tag.hbs
@@ -13,5 +13,8 @@
 </section>
 {{/tag}}
 
+{{!-- Ad tag top --}}
+{{>"ad-tag-top"}}
+
 {{!-- The tag below includes the post loop - partials/loop.hbs --}}
 {{>"loop"}}
