--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -7,6 +7,9 @@
                     {{!-- The tag below includes the post loop - partials/loop.hbs --}}
                     {{>"entry-post"}}
                 </div>
+
+                {{!-- Ad tag top --}}
+                {{>"ad-tag-author-bottom"}}
             </div>
 
             {{!-- Pagination --}}
