--- a/partials/sidenav.hbs
+++ b/partials/sidenav.hbs
@@ -10,8 +10,8 @@
         </div>
 
         <div class="sideNav-copyright u-textColorNormal u-fontSizeSmaller u-fontWeightSemibold u-textAlignCenter u-paddingTop20 u-paddingLeft20 u-paddingRight20">
-            &copy; {{date format="YYYY"}} <a href="{{@blog.url}}">{{@blog.title}}</a> Powered by <a href="https://ghost.org" target="_blank">Ghost</a>
-            Design with <i class="i-favorite animated infinite pulse" style="color:red;display:inline-block"></i> by <a href="https://goo.gl/Jf1tZe" target="_blank" title="Developer Web FullStack.">@GodoFredoNinja</a>
+            &copy; {{date format="YYYY"}} <a href="{{@blog.url}}">{{@blog.title}}</a>
+            Alojado en <a href="https://goo.gl/EBT3A7" target="_blank">DIGITAL OCEAN</a> $10 Gratis
         </div>
     </div>
 
