--- a/author.hbs
+++ b/author.hbs
@@ -2,8 +2,7 @@
 {{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
 
 {{#author}}
-<section class="author u-relative u-flex u-flexWrap u-backgroundSizeCover u-boxShadowBottom {{#if cover}}has--image{{/if}}" style="background-image:url({{cover}})">
-    {{#if cover}}<span class="u-absolute0 u-backgroundDark"></span>{{/if}}
+<section class="author u-relative u-flex u-flexWrap u-backgroundSizeCover u-boxShadowBottom">
 
     <article class="author-wrap u-flexCenter u-flexColumn u-relative u-maxWidth1040 u-container u-paddingTop20 u-paddingBottom20 u-textAlignCenter">
         <div class="author-header u-paddingBottom20 u-flex">
