--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -18,3 +18,8 @@
 
     </div>
 </section>
+<hr/>
+<section class="u-maxWidth1000 u-marginAuto">
+  <!— LightWidget WIDGET —><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/52392db52d1053e4840c30e6c0ff30f1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+  <p style="text-align: center; font-style: italic">Follow me on IG <a href="http://instagram.com/alice_ynju" target="_blank">@alice_ynju</a></p>
+</section>
