--- a/default.hbs
+++ b/default.hbs
@@ -15,7 +15,7 @@
 
     {{!-- Brand icon --}}
     <link rel="shortcut icon" href="{{asset "images/icon.png"}}" />
-    <link rel="icon" sizes="192x192" href="{{asset "images/icon.png"}}" />
+    <link rel="icon" type="image/png" sizes="192x192" href="{{asset "images/icon.png"}}" />
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "styles/main.css"}}"/>
