--- a/partials/entry.hbs
+++ b/partials/entry.hbs
@@ -7,7 +7,7 @@
     <section class="entry-body u-paddingTop15">
         <a href="{{url}}" class="u-block">
             <h2 class="entry-title u-contentTitle u-fontSizeLarge u-paddingBottom2 u-paddingTop5 u-lineHeight1">{{title}}</h2>
-            <p class="entry-excerpt u-paddingTop5 u-fontSizeBase">{{excerpt words="12"}}</p>
+            <p class="entry-excerpt u-paddingTop5 u-fontSizeBase">{{excerpt words="20"}}...</p>
         </a>
         {{!-- entry meta < author avtar, name, fisrt tag, datetime> --}}
         {{>"entry-meta"}}
