--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -5,7 +5,7 @@
         {{#is "home"}}
             {{#if @blog.cover}}
             <span class="u-absolute0 u-backgroundSizeCover u-hide-before-md" style="background-image: url('{{@blog.cover}}')"></span>
-            <span class="u-absolute0 u-backgroundDark u-hide-before-md"></span>
+            <span class="u-absolute0 u-backgroundPink u-hide-before-md"></span>
             {{else}}
             <span class="u-absolute0 u-hide-before-md" style="background:rgba(0,0,0,.175)"></span>
             {{/if}}
