--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,4 +1,4 @@
-<aside class="sidebar col s12 u-hide-before-md">
+<aside class="sidebar col s12 u-paddingLeft20 u-hide-before-md">
 
     {{!-- Sidebar Content Optional --}}
 
