--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1095,7 +1095,7 @@ p {
 }
 
 .u-headerColorLink a {
-    color: #ffffff
+    color: #fff;
 }
 
 .u-headerColorLink a.active,
@@ -1115,10 +1115,22 @@ p {
     display: block!important
 }
 
+.u-backgroundPink {
+    background: linear-gradient(-90deg, rgba(255, 255, 255, 0.3) 29%, rgba(255, 78, 78, 0.6) 81%);
+    background: -webkit-linear-gradient(-90deg, rgba(255, 255, 255, 0.3) 29%, rgba(255, 78, 78, 0.6) 81%);
+    background: -o-linear-gradient(-90deg, rgba(255, 255, 255, 0.3) 29%, rgba(255, 78, 78, 0.6) 81%);
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1
+}
+
 .u-backgroundDark {
-    background: -webkit-linear-gradient(top, rgba(0, 0, 0, .3) 29%, rgba(0, 0, 0, .6) 81%);
-    background: -o-linear-gradient(top, rgba(0, 0, 0, .3) 29%, rgba(0, 0, 0, .6) 81%);
-    background: linear-gradient(180deg, rgba(0, 0, 0, .3) 29%, rgba(0, 0, 0, .6) 81%);
+    background: linear-gradient(-90deg, rgba(255, 255, 255, 0.3) 29%, rgba(0, 0, 0, 0.6) 81%);
+    background: -webkit-linear-gradient(-90deg, rgba(255, 255, 255, 0.3) 29%, rgba(0, 0, 0, 0.6) 81%);
+    background: -o-linear-gradient(-90deg, rgba(255, 255, 255, 0.3) 29%, rgba(0, 0, 0, 0.6) 81%);
     bottom: 0;
     left: 0;
     position: absolute;
@@ -2390,7 +2402,7 @@ p {
 }
 
 .header-description {
-    color: #bbf1b9;
+    color: #fff;
     letter-spacing: -.02em;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -2480,7 +2492,7 @@ body.is-frontpage .header-wrap {
         padding-top: 15px
     }
     body.is-frontpage .header-wrap {
-        height: 400px;
+        height: 200px;
     }
     body.is-frontpage .header-logo {
         height: 40px;
