--- a/partials/post-comments.hbs
+++ b/partials/post-comments.hbs
@@ -1,6 +1,6 @@
 <div id="post-comments" class="post-comments u-backgroundWhite u-paddingTop30 u-paddingBottom30 link--accent">
     <div class="u-container u-maxWidth1000 u-card">
-      <div id="disqus_thread"></div>
+      <div id="disqus_thread" class="u-paddingLeft20 u-paddingRight20"></div>
       <script>
 
       /**
